<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Zf BTC Trader</string>
    <string name="versionnum">Version 1.0</string>
    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="label_settings">Settings</string>
    <string name="label_withdraw" tools:ignore="UnusedResources">Withdraw</string>
    <string name="label_deposit" tools:ignore="UnusedResources">Deposit</string>
    <string name="license">This application is free opensource software licensed under GNU Public License version 3.\n</string>
    <string name="donation"></string>
    <string name="mybtcaddress"></string>
    <string name="myltcaddress"></string>
    <string name="thankyou">Thank you for using Zf Bitcoin Trader</string>
    <string name="preference_file_key">myprefs</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="basebal">Base Balance</string>
    <string name="quotebal">Quote Balance</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="prefapikey">prefApiKey</string>
    <string name="prefapisecret">prefApiSecret</string>
    <string name="prefbtcaddress">prefbtcaddress</string>
    <string name="splash_reminder">Thank you for using Zf Bitcoin Trader!\n\n
    Security reminder:</string>
    <string name="splash_helptext">1) Please disable withdrawals for keys used with this app.\n2) PIN/Password is required to secure store your credentials</string>
    <string name="QR">QR</string>
    <string name="createdby">Created by Naofumi\nSpecial thanks Gopherdoc</string>
    <string name="signup">Sign up</string>
    <string name="loadingtrader">Loading Trader</string>
    <string name="cancel">Cancel</string>
    <string name="balance">Balance</string>
    <string name="deposit">Deposit</string>
    <string name="buysell">Buy/Sell</string>
    <string name="date">Date</string>
    <string name="quoteamount">Quote amount</string>
    <string name="position">Position</string>
    <string name="about">About</string>
    <string name="QRcodeimg">QRCodeImage</string>
    <string name="logo">Logo</string>
    <string name="coinimg">Coin Image</string>
    <string-array name="nav_drawer_items">
        <item>Trade</item>
        <item>Deposit</item>
        <item>Trade History</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <string name="apikey">API key</string>
    <string name="apisecretkey">API secret key</string>
    <string name="hidden">Hidden</string>
    <string name="returntotrading">Press again to return to trading</string>
    <string name="presstoexit">Keys are invalid. Please enter keys or press back again to quit</string>
    <string name="againtoexit">Press again to quit</string>
    <string name="checkapikey">Please API check keys</string>
    <string name="updateapikey">Update API Key</string>
    <string name="updateapisecret">Update API secret</string>
    <string name="insertkey">Please insert key</string>
    <string name="updatingtradehistory">Updating Trade History</string>
    <string name="retrievingaddress">Retrieving address...</string>
    <string name="loading">Loading</string>
    <string name="invalidorder">Invalid order</string>
    <string name="openorders">Open Order(s)</string>
    <string name="noopenorders">No Open Orders</string>
    <string name="oneopenorder">1 Open Order</string>
    <string name="openorder">Open Orders</string>
    <string name="cancelorder">Cancel order?</string>
    <string name="confirmtrade">Confirm Trade</string>
    <string name="at"> at </string>
    <string name="forr"> for </string>
    <string name="checkbuyamount">Please check buy amount</string>
    <string name="checksellamount">Please check sell amount</string>
    <string name="dismiss">Dismiss</string>
    <string name="close">Close</string>
    <string name="refresh_interval">Refresh Interval (sec)</string>
    <string name="depth_range">Depth Range (%)</string>
    <string name="depositbtc">Deposit BTC</string>
    <string name="currentbalance">Current balance</string>
    <string name="marketdepth">Market Depth</string>

    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <string name="banner_ad_unit_id">ca-app-pub-9209419102968336/5111200008</string>

</resources>
