<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FaintGray"
    android:weightSum="100"
    tools:ignore="Overdraw">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/splash_reminder"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/splash_helptext"
        android:text="@string/splash_helptext"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"/>
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="30"
        android:gravity="center"
        android:id="@+id/fragment_splashaction"/>

</LinearLayout>