<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:background="@color/FaintGray"
    tools:ignore="Overdraw"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="25"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:paddingLeft="5dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/coinidimg"
            android:focusable="false"
            android:clickable="false"
            android:contentDescription="@string/coinimg"/>
        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/coinid"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:focusable="false"
            android:clickable="false"/>
    </LinearLayout>
    <TextView
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="75"
        android:id="@+id/coinbalance"
        android:text="@string/balance"
        android:gravity="center_vertical|left"
        android:textStyle="bold"
        android:focusable="false"
        android:clickable="false"
        android:textSize="27sp"
        android:paddingLeft="15dp"
        android:textIsSelectable="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:id="@+id/coindeposit"
        android:gravity="center"
        android:layout_margin="6dp"
        android:padding="6dp"
        android:text="@string/deposit"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/balanceback"/>
</LinearLayout>

