<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:showDividers="middle">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:id="@+id/myactionbar"
        android:background="@color/black">
        <LinearLayout
            android:id="@+id/myactionbartitle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical|left"
            android:background="@color/black"
            android:clickable="true">
            <ImageView
                android:id="@+id/ab_drawer_icon"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@color/black"
                android:scaleY="0.6"/>
            <ImageView
                android:id="@+id/ab_app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/ic_launcher"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
        <com.github.naofum.zfbitcointrader.ListItemSettings
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:id="@+id/settings_primarykey"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            android:text="@string/QR"
            android:id="@+id/settings_btn_primarykey"
            android:onClick="OnSettingsQRClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
        <com.github.naofum.zfbitcointrader.ListItemSettings
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:id="@+id/settings_secretkey"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="20"
            android:text="@string/QR"
            android:id="@+id/settings_btn_secretkey"
            android:onClick="OnSettingsQRClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/refresh_interval"
            android:layout_gravity="center"
            android:textSize="28sp" />
        <NumberPicker
            android:id="@+id/refreshPicker"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="vertical"/>
     </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/depth_range"
            android:layout_gravity="center"
            android:textSize="28sp" />
        <NumberPicker
            android:id="@+id/depthRange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="vertical"/>
    </LinearLayout>

</LinearLayout>

